# raytracer-rs

./: Cargo.toml  LICENSE  README.md
benches/: my_bench.rs
scene/: sphere.rs
src/: lib.rs  main.rs  vec3.rs
src/image/: mod.rs  png.rs  ppm.rs
src/ray/: hit.rs  material.rs  mod.rs
src/scene/: camera.rs  mod.rs  sphere.rs
