[package]
name = "raytracer"
version = "0.1.0"
authors = ["Sabău Florin <36925871+Rorgon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.1"
rand = "0.7.0"
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_bench"
harness = false
